--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
              <provider
                 android:name="com.vaenow.appupdate.android.GenericFileProvider"
-                android:authorities="${applicationId}.appupdate.provider"
+                android:authorities="$PACKAGE_NAME.appupdate.provider"
                 android:exported="false"
                 android:grantUriPermissions="true">
                 <meta-data
